# BuyOut-ecommerce

./: .env  .env.example  .gitignore  DEMO_SCRIPT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  config.py  dependencies.py  main.py
api/lua/: reserve.lua
api/middleware/: auth.py  idempotency.py
api/models/: db.py  schemas.py
api/routers/: dashboard_ws.py  demo.py  health.py  inventory.py  payment.py  reserve.py  waiting_room.py  webhook.py  ws.py
api/services/: dashboard_metrics.py  order.py  payment.py  reservation.py  stock_broadcast.py  token.py  waiting_room.py
db/: init.sql
db/migrations/: 001_create_products.sql  002_create_orders.sql  003_create_order_events.sql  004_create_idempotency_keys.sql
db/seed/: seed_products.sql
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BotLauncher.tsx  CountdownTimer.tsx  CountdownTimerDramatic.tsx  LiveStatsBar.tsx  PaymentForm.tsx  PaymentModal.tsx  SneakerHero.tsx  SoldOutBanner.tsx  StockIndicator.tsx  WaitingRoom.tsx
frontend/hooks/: useDashboardWebSocket.ts  useReservation.ts  useTimeSeriesBuffer.ts  useWebSocket.ts
internal/: constants.py  db_client.py  logging.py  redis_client.py
scripts/: demo.sh  expire_reservations.py  locustfile.py  preload_inventory.py  reconcile.py  reset_all.sh  run_migrations.py  simulate_flash_sale.py
tests/: conftest.py  test_reserve.py  test_saga.py
worker/: Dockerfile  consumer.py  expire_reservations.py  main.py  saga.py
(+35 files in other folders)
